# PyGHX

./: .gitignore  CONTEXT.md  README.md  csghx.ghx  demo_rhinocommon.ghx  importModel.ghx  pyproject.toml
docs/: compute-profiling.md  gradient-output.md
scripts/: create_addition_template.py  create_csharp_addition_template.py  create_csharp_fixtures.py  create_csharp_step_import_fixture.py  create_csharp_step_scale_fixture.py  create_import_two_models_fixture.py  demo_csharp_step_import.cs  demo_csharp_step_scale.cs  demo_rhinocommon_script.cs  ghx_fixture_utils.py  rhino_compute_spike.py  write_csharp_step_demo_scripts.py
scripts/snippets/: csharp_geometry_piece_counting.cs  finite_difference_cases.cs  penalty_gradient_aggregator.cs
src/pyghx/: __init__.py  __main__.py  cli.py  compute.py  compute_encoding.py  constants.py  (+16 more)
tests/: __init__.py  component_coverage.py  conftest.py  ghx_fixture_mutators.py  helpers.py  test_brep_points.py  test_cli.py  test_compute.py  test_compute_encoding.py  test_compute_timing.py  test_compute_unit.py  test_csharp_compute.py  test_csharp_graph_edit.py  test_csharp_inspect.py  test_csharp_validate.py  test_fixture_generators.py  test_generate.py  test_generate_compute.py  test_generate_csharp.py  test_ghx_component_edit.py  test_ghx_integrity.py  test_gradient_descent.py  test_gradient_descent_integration.py  test_gradient_integration.py  test_inspect.py  test_known_components.py  test_loader.py  test_privacy_paths.py  test_reference_catalog.py  test_reference_extract_unit.py  test_reference_patterns.py  test_script_component.py  test_script_edit.py  test_script_input_wiring.py  test_script_source.py  test_validate.py
(+20 files in other folders)
