[project]
name = "pyghx"
version = "0.1.0"
description = "Inspect, validate, and evaluate Grasshopper GHX files for AI agents and RhinoCompute."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PyGHX contributors" }]
dependencies = []

[project.scripts]
pyghx = "pyghx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyghx"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests that require a live RhinoCompute server at localhost:5000",
]
