[project]
name = "pyghx"
version = "0.1.0"
description = "Inspect, validate, and evaluate Grasshopper GHX files for AI agents and RhinoCompute."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PyGHX contributors" }]
dependencies = [
    "scipy>=1.17.1",
]

[project.scripts]
pyghx = "pyghx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyghx"]

[tool.hatch.build.targets.wheel.force-include]
"src/pyghx/templates" = "pyghx/templates"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests that require a live RhinoCompute server at localhost:5000",
    "private_reference: tests that require PYGHX_REFERENCE_GHX pointing to a local private GHX",
]
